* [MDAPI-42] [.NET] Implement OptionChain

## Version 2.3.0

* [MDAPI-115] [.NET] Add IncOrderSnapshot sample
* [MDAPI-81] [.NET] Add MultipleMarketDepth sample
* [MDAPI-93] [.NET] Add DxFeedMarketDepth sample
* [MDAPI-109] [.NET] Add DxFeedCandleChart API sample
* [MDAPI-107] [.NET] Implement TimeSeriesTxModel
* [MDAPI-106] [.NET] Implement IndexedTxModel
* [MDAPI-92] [.NET] Implement MarketDepthModel
* [MDAPI-66] [.NET] Failed to build solution on Visual Studio 2022

## Version 2.2.0

* [MDAPI-25] [.NET] [IPF] Implement custom fields in InstrumentProfile
* [MDAPI-22] [.NET] CandleWebService API sample

## Version 2.1.0

* [MDAPI-21] [Java] [SDK] NoSuchMethodError exception when creating a monitoring endpoint
* [MDAPI-19] [.NET] [IPF] Allow set Bearer token for authentication

## Version 2.0.2

* Feature: Add DxFeedReconnectSample
* Fix: Schedule memory leak

## Version 2.0.1

* Fix: Exception when closing an app under .NET Framework

## Version 2.0.0

* Build all samples into one directory to reduce the size on disk
* Keep only self-contained builds for DxFeed.Graal.Net.Tools
* Add compatibility with netstandard 2.0
  - BACKWARD-INCOMPATIBLE CHANGE:
  The list of event flags moves from the IIndexedEvent interface to the new EventFlags class.
  - BACKWARD-INCOMPATIBLE CHANGE:
  Method GetEventTypes moves from the IEventType interface to DXEndpoint class.
* Fix copyright header in Utils
* Fix build warnings
* Bump StyleCop.Analyzers
* Fix CodeQL workflow

## Version 1.3.1

* Fix receiving Greeks and TheoPrice via dxLink

## Version 1.3.0

* Bump GraalVM to JDK 22.0.1
* Add OtcMarketsOrder and #pink source
* Add Schedule
* Fix an error when the isolate was not created in the main thread
* Add Custom Marshalers and Graal parsers
* Add TimeFormat, TimePeriod and SymbolParser
* Add GetSymbols and SetSymbols for DXFeedSubscription

## Version 1.2.1

* Improve TimeSeriesEventAsync public API

## Version 1.2.0

* Add TimeSeriesEventAsync

## Version 1.1.0

* Add qds-tools